tests/errors/unsorted/compiler/bool_conversions/LOGOR_9030.c
void main()
{
  char b;
  b = 1 || 2 || 3 || 4;

  assert(b == 1, "b must be 1");
}